welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: type mismatch;
 found   : Boolean
 required: Int
while (x=0==false){
          ^Variables:8: error: type mismatch;
 found   : Unit
 required: Boolean
while (x=0==false){
        ^Variables:9: error: type mismatch;
 found   : Unit
 required: ?{def x: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2Ensuring in object Predef of type [A](x: A)Ensuring[A]
 and method any2ArrowAssoc in object Predef of type [A](x: A)ArrowAssoc[A]
 are possible conversion functions from Unit to ?{def x: ?}
	recule() x=x-1
              ^Variables:9: error: value x is not a member of Unit
	recule() x=x-1
                 ^