welcome.lessons.welcome.variables.Variables.scala.code
var x:Int = 0
while (estSurBiscuit==false){
	avance()
	x=x+1
}
prendBiscuit();
while (x=0==false){
	recule() x=x-1
}
